# ANIMAT

./: .gitignore  README.md
ProjetNN/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe  cmake_install.cmake  expert  maze.pbm~  plot2.py  plot2.py~  resultat_plot.txt  resultats_tour_5.txt  test.pbm~
ProjetNN/res2/: plot2.py  plot2.py~  resultats_tour_1.txt  resultats_tour_10.txt  resultats_tour_2.txt  resultats_tour_3.txt  resultats_tour_3.txt~  resultats_tour_4.txt  resultats_tour_6.txt  resultats_tour_7.txt  resultats_tour_8.txt  resultats_tour_9.txt
ProjetNN/src/: main.cpp
ProjetNN/src/network/: Expert.cpp  Expert.cpp~  Expert.hpp  Expert.hpp~  Layer.cpp  Layer.cpp~  Layer.hpp  Layer.hpp~  Loss.cpp  Loss.cpp~  Loss.hpp  Loss.hpp~  Module.cpp  Module.cpp~  Module.hpp  Module.hpp~  SigModule.cpp  SigModule.cpp~  SigModule.hpp  SigModule.hpp~  TanModule.cpp  TanModule.cpp~  TanModule.hpp  TanModule.hpp~
ProjetNN/src/simulation/: Display.cpp~  Display.hpp  Display.hpp~  Goal.hpp  IlluminatedSwitch.hpp  IlluminatedSwitch.hpp~  Laser.cpp  Laser.cpp~  LightSensor.cpp~  LightSensor.hpp~  LinearCamera.cpp  Map.hpp  Map.hpp~  Navigation.cpp  Navigation.hpp  Navigation.hpp~  Radar.hpp  Robot.cpp  Robot.cpp~  Robot.hpp~  misc.hpp
ProjetNN/src/tools/: Matrix.hpp  Plot.cpp  Plot.cpp~  Plot.hpp  Plot.hpp~  Vector.hpp  Vector.hpp~  smart_ptr.h
ProjetRNN/: CMakeLists.txt  Makefile  test.pbm
ProjetRNN/resultat/: plot.py  plot.py~  plot2.py  plot2.py~  plot3.py  plot3.py~  resultat_plot.txt  resultat_tour_long1.txt
ProjetRNN/resultat/resultats1/: resultats_tour_1.txt  resultats_tour_10.txt  resultats_tour_2.txt  resultats_tour_3.txt  resultats_tour_4.txt  resultats_tour_5.txt  resultats_tour_6.txt  resultats_tour_7.txt  resultats_tour_8.txt  resultats_tour_9.txt
ProjetRNN/resultat/resultats2/: resultats_tour_1.txt  resultats_tour_10.txt  resultats_tour_2.txt  resultats_tour_3.txt  resultats_tour_4.txt  resultats_tour_5.txt  resultats_tour_6.txt  resultats_tour_7.txt  resultats_tour_8.txt  resultats_tour_9.txt
ProjetRNN/resultat/resultats3/: resultats_tour_1.txt  resultats_tour_10.txt  resultats_tour_2.txt  resultats_tour_3.txt  resultats_tour_4.txt  resultats_tour_5.txt  resultats_tour_6.tx  resultats_tour_7.txt  resultats_tour_8.txt  resultats_tour_9.txt
ProjetRNN/resultat/resultats4/: resultats_tour_1.txt  resultats_tour_10.txt  resultats_tour_2.txt  resultats_tour_3.txt  resultats_tour_4.txt  resultats_tour_5.txt  resultats_tour_6.txt  resultats_tour_7.txt  resultats_tour_8.txt  resultats_tour_9.txt
ProjetRNN/resultat/resultats5/: resultats_tour_1.txt  resultats_tour_10.txt  resultats_tour_2.txt  resultats_tour_3.txt  resultats_tour_4.txt  resultats_tour_5.txt  resultats_tour_6.txt  resultats_tour_7.txt  resultats_tour_8.txt  (+1 more)
ProjetRNN/src/: main.cpp  main.cpp~
(+56 files in other folders)
